fix _nav links + test folder 'style.css' & 'script.js'

--- a/templates/layouts/_nav.html
+++ b/templates/layouts/_nav.html
@@ -1,7 +1,7 @@
 <nav>
   <ul>
-    <li><a href="{% url 'home' %}">Home</a></li>
-    <li><a href="{% url 'chroniques:index' %}">Chroniques</a></li>
+    <li><a href="{% url 'index' %}">Home</a></li>
+    <li><a href="{% url 'blog:list' %}">Chroniques</a></li>
     <li><a href="{% url 'about' %}">About</a></li>
     <li><a href="{% url 'contact' %}">Contact</a></li>
   </ul>
