--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -19,4 +19,6 @@
 
       {% include 'layouts/_footer.html' %}
   </body>
+
+  <script type="text/javascript" src="{% static 'js/script.js' %}"></script>
 </html>
