--- a/templates/layouts/_nav.html
+++ b/templates/layouts/_nav.html
@@ -1,7 +1,8 @@
 <nav>
-  <ul>
-    <li><a href="{% url 'index' %}">Home</a></li>
-    <li><a href="{% url 'blog:list' %}">Chroniques</a></li>
+  <a href="#">RTFB</a>
+  <ul class="navbar-right">
+    <li><a href="{% url 'index' %}">Accueil</a></li>
+    <li><a href="{% url 'blog:list' %}">La liste</a></li>
     <li><a href="{% url 'about' %}">About</a></li>
     <li><a href="{% url 'contact' %}">Contact</a></li>
   </ul>
