--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -8,6 +8,7 @@
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css">
     <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
+    <link rel="text/x-scss" href="{{ STATIC_URL }}stylesheets/bootstrap.scss" type="text/css" charset="utf-8">
 
     <title>{% block title %}Acme{% endblock %}</title>
   </head>
