--- a/templates/layouts/_footer.html
+++ b/templates/layouts/_footer.html
@@ -1,3 +1,6 @@
 <footer>
+  <div>
+
+  </div>
   <p>Copyright © {% now 'Y' %} - Jérémy Le Prunenec & Rémi De Grauw - All Rights Reserved.</p>
 </footer>
