--- a/templates/layouts/_nav.html
+++ b/templates/layouts/_nav.html
@@ -1,8 +1,8 @@
 <nav>
-  <a href="#">RTFB</a>
-  <ul class="navbar-right">
+  <a class="brand" href="{% url 'index' %}">RTFB</a>
+  <ul>
     <li><a href="{% url 'index' %}">Accueil</a></li>
-    <li><a href="{% url 'blog:list' %}">La liste</a></li>
+    <li><a href="{% url 'blog:list' %}">Les livres</a></li>
     <li><a href="{% url 'about' %}">About</a></li>
     <li><a href="{% url 'contact' %}">Contact</a></li>
   </ul>
