--- a/templates/layouts/_nav.html
+++ b/templates/layouts/_nav.html
@@ -1,5 +1,5 @@
 <nav>
-  <a class="brand" href="{% url 'index' %}">RTFB</a>
+  <a class="" href="{% url 'index' %}">RTFB</a>
   <ul>
     <li><a href="{% url 'index' %}">Accueil</a></li>
     <li><a href="{% url 'blog:list' %}">Les livres</a></li>
