--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -1,7 +1,7 @@
 {% extends 'layouts/base.html' %}
 
 {% block content %}
-  <section>
+  <section class="">
     <h1>Bienvenu sur RTFB</h1>
   </section>
 {% endblock %}
