--- a/static/css/style.css
+++ b/static/css/style.css
@@ -37,14 +37,13 @@ nav a{
 }
 
 nav > a{
-  border: 1px solid red;
-  height: 100%;
-  padding: 10px 0 0 10px;
   font-size: 26px
 }
 
 nav ul{
-  display: none
+  width: 75%;
+  float: right
+  /*display: none*/
 }
 
 nav li{
