--- a/blog/templates/blog/details.html
+++ b/blog/templates/blog/details.html
@@ -1,10 +1,23 @@
 {% extends 'layouts/base.html' %}
 
-{% block title %}Blog | Article {{ post.id }}{% endblock %}
+{% load static %}
+
+{% block link %}<link rel="stylesheet" href="{% static 'blog/css/style.css' %}">{% endblock %}
+{% block title %}Livre | {{ post.name }}{% endblock %}
 
 {% block content %}
-<h1>#{{ post.id }} - {{ post.name}}</h1>
-<p>{{ post.resume }}</p>
-<p>{{ post.analytic }}</p>
-<a href="{% url 'blog:list' %}">Return to list</a>
+<article>
+  <div>
+    <img src="{{ post.picture.url }}" alt="{{ post.name }}">
+    <h3><a href="{% url 'blog:details' post.id %}">{{ post.name }}</a></h3>
+  </div>
+  <div>
+    <p>{{ post.headline }}</p>
+  </div>
+  <h5>{{ post.Author.name }}</h5>
+  <p>{{ post.Author.headline }}</p>
+  <hr>
+  <p>{{ post.analytic|truncatewords:11 }}</p>
+  <a href="{% url 'blog:list' %}">Retourner à la liste des livres</a>
+</article>
 {% endblock %}
