--- a/blog/templates/blog/list.html
+++ b/blog/templates/blog/list.html
@@ -2,23 +2,22 @@
 
 {% load static %}
 
-{% block title %}Blog{% endblock %}
+{% block link %}<link rel="stylesheet" href="{% static 'blog/css/style.css' %}">{% endblock %}
+{% block title %}RTFB | Livres{% endblock %}
 
 {% block content %}
 <h1>Blog ({{ posts|length }} post{{ posts|pluralize }})</h1>
 
+<div class="container">
 {% for post in posts %}
-<article>
-  <h2><a href="{% url 'blog:details' post.id %}">{{ post.name }}</a></h2>
-  <img src="{{ post.picture.url }}" alt="">
-  <p>{{ post.Author.name }}</p>
-  <p>{{ post.headline|truncatewords:11 }}</p>
-  <p>{{ post.analytic|truncatewords:11 }}</p>
-  <a href="{% url 'blog:details' post.id %}">View more</a>
-</article>
-{% if not forloop.last %}
-<hr>
-{% endif %}
-
+  <article>
+    <img src="{{ post.picture.url }}" alt="{{ post.name }}">
+    <time>{{ post.created_at }}</time>
+    <h3><a href="{% url 'blog:details' post.id %}">{{ post.name }}</a></h3>
+    <h5>{{ post.Author.name }}</h5>
+    <p>{{ post.headline|truncatewords:30 }}</p>
+    <a href="{% url 'blog:details' post.id %}">View more</a>
+  </article>
 {% endfor %}
+</div>
 {% endblock %}
