--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -1,4 +1,9 @@
 {% load static %}
+{% load bootstrap3 %}
+
+{% bootstrap_css %}
+{% bootstrap_javascript %}
+{% bootstrap_messages %}
 
 <!DOCTYPE html>
 <html lang="fr">
@@ -8,6 +13,7 @@
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css">
     <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
+    {% block link %}{% endblock %}
 
     <title>{% block title %}RTFB{% endblock %}</title>
   </head>
