--- a/templates/layouts/_nav.html
+++ b/templates/layouts/_nav.html
@@ -1,10 +1,12 @@
-<nav>
-  <a class="" href="{% url 'index' %}">RTFB</a>
+<header>
+  <h1 class="center-block" href="{% url 'index' %}">RTFB</h1>
 
-  <ul>
-    <li><a href="{% url 'index' %}">Accueil</a></li>
-    <li><a href="{% url 'blog:list' %}">Les livres</a></li>
-    <li><a href="{% url 'about' %}">About</a></li>
-    <li><a href="{% url 'contact' %}">Contact</a></li>
-  </ul>
-</nav>
+  <nav>
+    <ul>
+      <li><a href="{% url 'index' %}">Accueil</a></li>
+      <li><a href="{% url 'blog:list' %}">Les livres</a></li>
+      <li><a href="{% url 'about' %}">About</a></li>
+      <li><a href="{% url 'contact' %}">Contact</a></li>
+    </ul>
+  </nav>
+</header>
