--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -2,7 +2,6 @@
 {% load bootstrap3 %}
 
 {% bootstrap_css %}
-{% bootstrap_javascript %}
 {% bootstrap_messages %}
 
 <!DOCTYPE html>
@@ -11,7 +10,6 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css">
     <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
     {% block link %}{% endblock %}
 
@@ -27,5 +25,7 @@
 
   </body>
 
+  <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
+  {% bootstrap_javascript %}
   <script type="text/javascript" src="{% static 'js/script.js' %}"></script>
 </html>
