--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -19,7 +19,9 @@
   <body>
       {% include 'layouts/_nav.html' %}
 
-      {% block content %}{% endblock %}
+      <div class="container-fluid">
+        {% block content %}{% endblock %}
+      </div>
 
       {% include 'layouts/_footer.html' %}
 
