--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -1,7 +1,97 @@
 {% extends 'layouts/base.html' %}
 
+{% load static %}
+
 {% block content %}
   <section class="">
-    <h1>Bienvenu sur RTFB</h1>
+    <div class="row">
+      {% for post in recent %}
+      <div class="col-xs-12 col-sm-6 col-md-3">
+        <div class="thumbnail">
+          <img src="{{ post.picture.url }}" alt="...">
+          <div class="caption">
+            <h3>{{ post.name }}</h3>
+            <h5>de {{ post.Author }}</h5>
+            <p>{{ post.headline|truncatewords:25 }}</p>
+            <p><a href="{% url 'blog:details' post.id %}" class="btn btn-primary" role="button">View more</a></p>
+          </div>
+        </div>
+      </div>
+      {% endfor %}
+    </div>
   </section>
+
+  <section>
+    <div class="row">
+      <div class="col-md-7">
+        <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+          <!-- Indicators -->
+          <ol class="carousel-indicators">
+            <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+            <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+            <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+          </ol>
+
+          <!-- Wrapper for slides -->
+          <div class="carousel-inner" role="listbox">
+            {% for post in mostPop %}
+            <div class="item active">
+              <img src="{{ post.picture.url }}" alt="...">
+              <div class="carousel-caption">
+                <h3>{{ post.name }}</h3>
+                <p>de {{ post.Author }}</p>
+              </div>
+            </div>
+            {% endfor %}
+
+            {% for post in recent %}
+            <div class="item">
+              <img src="{{ post.picture.url }}" alt="...">
+              <div class="carousel-caption">
+                <h3>{{ post.name }}</h3>
+                <p>de {{ post.Author }}</p>
+              </div>
+            </div>
+            {% endfor %}
+          </div>
+
+          <!-- Controls -->
+          <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+            <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+          </a>
+          <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+            <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+          </a>
+        </div>
+      </div>
+
+      <div class="col-md-5">
+        <h2>Retrouvez ici, les posts les plus populaires !  </h2>
+        <p>Tout au long de ce blog vous trouverez la popularité des oeuvres et de leur(s) analyse(s) afin de vous offrir les meilleures analyse et interprétation.</p>
+      </div>
+    </div>
+  </section>
+
+  <section>
+    <div class="row">
+      <div class="col-md-5">
+        <h3>Les Oeuvres</h3>
+      </div>
+
+      <div class="col-md-5">
+        <h3>Les Auteurs</h3>
+      </div>
+
+      <div class="col-md-5">
+        <h3>Les Siècles</h3>
+      </div>
+
+      <div class="col-md-5">
+        <h3>Les Séquences</h3>
+      </div>
+    </div>
+  </section>
+
 {% endblock %}
