--- a/templates/layouts/_nav.html
+++ b/templates/layouts/_nav.html
@@ -15,7 +15,7 @@
     </div>
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <form class="navbar-form navbar-right">
-        <input type="text" class="form-control">
+        <input type="text">
         <button type="submit" class="btn btn-default">Search</button>
       </form>
       <ul class="nav navbar-nav navbar-right">
