--- a/static/css/style.css
+++ b/static/css/style.css
@@ -70,7 +70,24 @@ nav{
   background-color: #c0d33d !important;
   border-radius: 0px !important;
   border: none !important;
-  /*border-bottom: 2px solid #800 !important;*/
+}
+
+nav:after{
+  content: "";
+  height: 2px;
+  width: 90px;
+  background-color: #800;
+  animation: slide 1s .5s alternate;
+  animation-fill-mode: forwards;
+}
+
+@keyframes slide {
+  0%{
+    width: 90px;
+  }
+  100%{
+    width: 100%;
+  }
 }
 
 nav a{
@@ -85,7 +102,9 @@ nav .navbar-right input{
   padding: 6px 12px;
   font-size: 14px;
   line-height: 1.42857143;
-  border: 1px solid #ccc;
+  border-top-left-radius: 4px;
+  border-bottom-left-radius: 4px;
+  border: none;
   box-shadow: inset 1px 1px 10px rgba(0,0,0,.1);
 }
 
@@ -95,6 +114,13 @@ nav .navbar-right button{
   color: #EFF !important;
   border: 0 !important;
   background-color: #c00c00 !important;
+  border-top-right-radius: 4px !important;
+  border-bottom-right-radius: 4px !important;
+  transition: .25s all;
+}
+
+nav .navbar-right button:hover, nav .navbar-right input:hover{
+  border-radius: 0px !important;
 }
 
 .home-header{
@@ -122,14 +148,6 @@ nav .navbar-right button{
 footer{
   height: 200px;
   text-align: center;
-  background-color: #333;
-  color: #fefefe
-}
-
-footer div{
-  height: calc(100% - 50px)
-}
-
-footer > p{
-  height: 50px
+  background-color: #080800;
+  color: #EFF
 }
