--- a/templates/layouts/_footer.html
+++ b/templates/layouts/_footer.html
@@ -1,6 +1,5 @@
-<footer>
-  <div>
-
+<footer class="footer">
+  <div class="container">
+    <p>Copyright © {% now 'Y' %} - Jérémy Le Prunenec & Rémi De Grauw - All Rights Reserved.</p>
   </div>
-  <p>Copyright © {% now 'Y' %} - Jérémy Le Prunenec & Rémi De Grauw - All Rights Reserved.</p>
 </footer>
