--- a/blog/templates/blog/list.html
+++ b/blog/templates/blog/list.html
@@ -8,16 +8,20 @@
 {% block content %}
 <h1>Blog ({{ posts|length }} post{{ posts|pluralize }})</h1>
 
-<div class="container">
-{% for post in posts %}
-  <article>
-    <img src="{{ post.picture.url }}" alt="{{ post.name }}">
-    <time>{{ post.created_at }}</time>
-    <h3><a href="{% url 'blog:details' post.id %}">{{ post.name }}</a></h3>
-    <h5>{{ post.Author.name }}</h5>
-    <p>{{ post.headline|truncatewords:30 }}</p>
-    <a href="{% url 'blog:details' post.id %}">View more</a>
-  </article>
-{% endfor %}
-</div>
+<section class="row">
+    {% for post in posts %}
+    <div class="col-xs-12 col-sm-6 col-md-3">
+      <article class="thumbnail">
+        <img src="{{ post.picture.url }}" alt="...">
+        <time>{{ post.created_at }}</time>
+        <div class="caption">
+          <h3>{{ post.name }}</h3>
+          <h5>de {{ post.Author }}</h5>
+          <p>{{ post.headline|truncatewords:20 }}</p>
+          <p><a href="{% url 'blog:details' post.id %}" class="btn btn-primary" role="button">View more</a></p>
+        </div>
+      </article>
+    </div>
+    {% endfor %}
+</section>
 {% endblock %}
