--- a/templates/layouts/_nav.html
+++ b/templates/layouts/_nav.html
@@ -14,8 +14,8 @@
       <a class="navbar-brand rtfb-logo" href="#"><span>RT</span><span>FB</span></a>
     </div>
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <form class="navbar-form navbar-right">
-        <input type="text">
+      <form action="{% url 'blog:list' %}" method="GET" class="navbar-form navbar-right">
+        <input name="q" placeholder="Autheur, nom du livre..." type="text">
         <button type="submit" class="btn btn-default">Search</button>
       </form>
       <ul class="nav navbar-nav navbar-right">
