Finish HTML 'About'

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -64,6 +64,17 @@ section{
   color: #800;
 }
 
+
+/*
+ ######
+ #     #   ##    ####  ######
+ #     #  #  #  #      #
+ ######  #    #  ####  #####
+ #     # ######      # #
+ #     # #    # #    # #
+ ######  #    #  ####  ######
+*/
+
 /*body*/
 
 nav{
@@ -150,4 +161,18 @@ footer{
   text-align: center;
   background-color: #080800;
   color: #EFF
+}
+
+
+/*
+ # #    # #####  ###### #    #
+ # ##   # #    # #       #  #
+ # # #  # #    # #####    ##
+ # #  # # #    # #        ##
+ # #   ## #    # #       #  #
+ # #    # #####  ###### #    #
+*/
+#most-recent article > img{
+  height: 100px !important;
+  width: auto
 }
