--- a/templates/layouts/_nav.html
+++ b/templates/layouts/_nav.html
@@ -15,12 +15,12 @@
     </div>
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <form action="{% url 'blog:list' %}" method="GET" class="navbar-form navbar-right">
-        <input name="q" placeholder="Autheur, nom du livre..." type="text">
+        <input name="q" placeholder="Auteur, nom du livre..." type="text">
         <button type="submit" class="btn btn-default">Search</button>
       </form>
       <ul class="nav navbar-nav navbar-right">
         <li><a href="{% url 'index' %}">Accueil</a></li>
-        <li><a href="{% url 'blog:list' %}">Liste</a></li>
+        <li><a href="{% url 'blog:list' %}">Livres</a></li>
         <li><a href="{% url 'about' %}">À propos</a></li>
         <li><a href="{% url 'contact' %}">Contact</a></li>
       </ul>
