--- a/blog/templates/blog/list.html
+++ b/blog/templates/blog/list.html
@@ -13,7 +13,7 @@
     <div class="col-xs-12 col-sm-6 col-md-3">
       <article class="thumbnail">
         <img src="{{ post.picture.url }}" alt="...">
-        <time>{{ post.created_at }}</time>
+        <time datetime="{{ post.created_at|date:'d-m-Y' }}">{{ post.created_at|date:'d-M' }}</time>
         <div class="caption">
           <h3>{{ post.name }}</h3>
           <h5>de {{ post.Author }}</h5>
