--- a/templates/pages/contact.html
+++ b/templates/pages/contact.html
@@ -1,5 +1,54 @@
 {% extends 'layouts/base.html' %}
 
+{% load static %}
+
 {% block content %}
-  <h1>Contact</h1>
+  <section class="row">
+    <div class="col-sm-12">
+      <h1>Me contacter</h1>
+    </div>
+
+    	<div class="row">
+        <div class="col-md-6 col-md-offset-3">
+          <div class="">
+            <form class="form-horizontal" action="" method="post">
+            <fieldset>
+              <legend class="text-center"></legend>
+
+              <!-- Name input-->
+              <div class="form-group">
+                <label class="col-md-3 control-label" for="name">Name</label>
+                <div class="col-md-9">
+                  <input id="name" name="name" type="text" placeholder="Your name" class="form-control">
+                </div>
+              </div>
+
+              <!-- Email input-->
+              <div class="form-group">
+                <label class="col-md-3 control-label" for="email">Your E-mail</label>
+                <div class="col-md-9">
+                  <input id="email" name="email" type="text" placeholder="Your email" class="form-control">
+                </div>
+              </div>
+
+              <!-- Message body -->
+              <div class="form-group">
+                <label class="col-md-3 control-label" for="message">Your message</label>
+                <div class="col-md-9">
+                  <textarea class="form-control" id="message" name="message" placeholder="Please enter your message here..." rows="5"></textarea>
+                </div>
+              </div>
+
+              <!-- Form actions -->
+              <div class="form-group">
+                <div class="col-md-12 text-right">
+                  <button type="submit" class="btn btn-lg">Submit</button>
+                </div>
+              </div>
+            </fieldset>
+            </form>
+          </div>
+        </div>
+  	</div>
+  </section>
 {% endblock %}
