--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -10,12 +10,12 @@
           <div class="col-xs-12 col-sm-6 col-md-4">
             <article class="thumbnail">
               <img src="{{ post.picture.url }}" alt="...">
-              <time>{{ post.created_at }}</time>
+              <time datetime="{{ post.created_at|date:'d-m-Y' }}">{{ post.created_at|date:'d-M' }}</time
               <div class="caption">
                 <h3>{{ post.name }}</h3>
                 <h5>de {{ post.Author }}</h5>
                 <p>{{ post.headline|truncatewords:20 }}</p>
-                <p><a href="{% url 'blog:details' post.id %}" class="btn btn-primary" role="button">View more</a></p>
+                <p><a href="{% url 'blog:details' post.id %}" class="btn" role="button">View more</a></p>
               </div>
             </article>
           </div>
