--- a/static/css/style.css
+++ b/static/css/style.css
@@ -15,7 +15,7 @@ li{
 }
 
 button, .btn{
-  background-color: #C0D33Dr !important;
+  background-color: #C0D33D !important;
   color: #800;
   border: none !important;
   transition: 0.25s all;
