--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -3,14 +3,14 @@
 {% load static %}
 
 {% block content %}
-  <main role="main" class="row">
+  <div class="row">
     <div class="col-md-9">
       <section class="row">
           {% for post in recent %}
           <div class="col-xs-12 col-sm-6 col-md-4">
             <article class="thumbnail">
               <img src="{{ post.picture.url }}" alt="...">
-              <time datetime="{{ post.created_at|date:'d-m-Y' }}">{{ post.created_at|date:'d-M' }}</time
+              <time datetime="{{ post.created_at|date:'d-m-Y' }}">{{ post.created_at|date:'d-M' }}</time>
               <div class="caption">
                 <h3>{{ post.name }}</h3>
                 <h5>de {{ post.Author }}</h5>
@@ -81,6 +81,7 @@
           </div>
       </section>
     </div>
+    
     <aside class="col-md-3">
       <div class="row">
         <div class="col-md-12">
