--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -5,14 +5,18 @@
 {% block content %}
   <div class="row">
     <div class="col-md-9">
-      <section class="row">
+      <section id="mostRecent" class="row">
           {% for post in recent %}
           <div class="col-xs-12 col-sm-6 col-md-4">
             <article class="thumbnail">
-              <img src="{{ post.picture.url }}" alt="...">
+              <div class="img-thumbnail">
+                <img class="img-responsive" src="{{ post.picture.url }}" alt="{{ post.name }}">
+              </div>
               <time datetime="{{ post.created_at|date:'d-m-Y' }}">{{ post.created_at|date:'d-M' }}</time>
               <div class="caption">
-                <h3>{{ post.name }}</h3>
+                <div class="title-thumbnail">
+                  <h3>{{ post.name }}</h3>
+                </div>
                 <h5>de {{ post.Author }}</h5>
                 <p>{{ post.headline|truncatewords:20 }}</p>
                 <p><a href="{% url 'blog:details' post.id %}" class="btn" role="button">View more</a></p>
@@ -81,9 +85,9 @@
           </div>
       </section>
     </div>
-    
+
     <aside class="col-md-3">
-      <div class="row">
+      <div id="inscription" class="row">
         <div class="col-md-12">
           <h3>Recevoir les dernières oeuvres commentées!</h3>
           <form class="form-horizontal">
@@ -98,7 +102,7 @@
               </div>
             </div>
             <div class="form">
-              <div class="col-sm-offset-7 col-sm-12">
+              <div class="col-sm-12">
                 <button type="submit" class="btn btn-default">Sign in</button>
               </div>
             </div>
