--- a/static/css/style.css
+++ b/static/css/style.css
@@ -173,10 +173,24 @@ nav .navbar-right button:hover, nav .navbar-right input:hover{
 
 /*Footer*/
 footer{
-  height: 200px;
+  min-height: 250px;
   text-align: center;
   background-color: #080800;
   color: #EFF
+}
+
+/*INSCRIPTION*/
+#inscription{
+  margin-top: 20px
+}
+
+/*ACTUALITES*/
+#actuality{
+  padding: 10px 0
+}
+
+#actuality img{
+  height: 150px
 }
 
 
@@ -189,11 +203,17 @@ footer{
  # #    # #####  ###### #    #
 */
 
+/*******/
 /*Body*/
+/*******/
+
+/*SECTION 1 : mostRecent*/
 
 #mostRecent{
   /*border: 1px solid red;*/
-  height: 550px
+  height: 550px;
+  display: flex;
+  justify-content: space-around
 }
 
 #mostRecent article{
@@ -215,19 +235,64 @@ footer{
   margin-top: 0
 }
 
+/*SECTION 2 : mostPopular*/
 
-
-
-/*Aside*/
-aside{
-  /*border: 1px solid red;*/
-  background-color: #navy
+#mostPopular{
+  height: 550px;
+  margin-top: 100px
 }
 
-/*Inscription*/
+#mostPopular .carousel-inner{
+  height: 100%;
+  width: 100%
+}
 
-#inscription{
-  height: 350px;
-  padding-top: 70px;
-  /*border: 1px solid red*/
+#mostPopular .carousel-inner img{
+  height: 100%;
+  width: auto;
+  margin: auto
+}
+
+#mostPopular .carousel-caption{
+
+}
+
+#mostPopular > div:last-child{
+  margin-top: 130px
+}
+
+#categories{
+  height: 500px;
+  display: flex;
+  flex-flow: row;
+  justify-content: space-around;
+  align-items: center;
+}
+
+#categories > div{
+  height: 210px;
+  width: 210px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+#categories > div:nth-of-type(1){
+  background-color: #F83
+}
+
+#categories > div:nth-of-type(4){
+  background-color: #C00C00
+}
+
+#categories > div:nth-of-type(2){
+  background-color: #48F
+}
+
+#categories > div:nth-of-type(3){
+  background-color: #8F9
+}
+
+#categories > div:first-child{
+  /*margin-left: 0*/
 }
