Fix container 'footer'

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -186,6 +186,7 @@ footer{
 
 /*ACTUALITES*/
 #actuality{
+  margin
   padding: 10px 0
 }
 
@@ -230,6 +231,11 @@ footer{
 #mostRecent .title-thumbnail{
   height: 50px;
 }
+/*
+#mostRecent .caption p:first-child{
+  border: 1px solid red;
+  background-color: red
+}*/
 
 #mostRecent h3{
   margin-top: 0
@@ -275,14 +281,17 @@ footer{
   display: flex;
   justify-content: center;
   align-items: center;
+  cursor: pointer;
+  border-radius: 5px
+}
+
+#categories > div:hover{
+  transform: scale(0.96);
+  box-shadow: inset 0 0 6px #333
 }
 
 #categories > div:nth-of-type(1){
   background-color: #F83
-}
-
-#categories > div:nth-of-type(4){
-  background-color: #C00C00
 }
 
 #categories > div:nth-of-type(2){
@@ -290,6 +299,10 @@ footer{
 }
 
 #categories > div:nth-of-type(3){
+  background-color: #C00C00
+}
+
+#categories > div:nth-of-type(4){
   background-color: #8F9
 }
 
