--- a/templates/layouts/_footer.html
+++ b/templates/layouts/_footer.html
@@ -1,4 +1,4 @@
-<footer class="footer">
+<footer class="container-fluid">
   <div class="row">
     <div id="inscription" class="col-md-4">
         <h4>Je m'enregistre en temps que membre !</h4>
@@ -22,18 +22,22 @@
     </div>
 
     <div id="actuality" class="col-md-offset-4 col-md-4">
-      <div class="col-md-12">
-        <h4>Actualités</h4>
+      <div class="row">
         <div class="col-md-12">
-          <a href="https://e-bayard-jeunesse.com/magazines-11-ans-et-plus/phosphore-14-ans-et-plus/abonnement-phosphore.html">
-            <img src="https://static.bayardweb.com/Magento/data/flux/m_bj_1an_pho.jpg" alt="">
-          </a>
+          <h4>Actualités</h4>
+          <div class="col-md-12">
+            <a href="https://e-bayard-jeunesse.com/magazines-11-ans-et-plus/phosphore-14-ans-et-plus/abonnement-phosphore.html">
+              <img src="https://static.bayardweb.com/Magento/data/flux/m_bj_1an_pho.jpg" alt="">
+            </a>
+          </div>
         </div>
       </div>
     </div>
   </div>
 
-  <div class="container">
-    <p>Copyright © {% now 'Y' %} - Jérémy Le Prunenec & Rémi De Grauw - All Rights Reserved.</p>
+  <div class="row">
+    <div class="col-md-12">
+      <p>Copyright © {% now 'Y' %} - Jérémy Le Prunenec & Rémi De Grauw - All Rights Reserved.</p>
+    </div>
   </div>
 </footer>
