--- a/templates/layouts/_nav.html
+++ b/templates/layouts/_nav.html
@@ -14,6 +14,9 @@
       <a class="navbar-brand rtfb-logo" href="#"><span>RT</span><span>FB</span></a>
     </div>
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav navbar-right">
+        <li><a href="{% url 'login' %}">Sign in</a></li>
+      </ul>
       <form action="{% url 'blog:list' %}" method="GET" class="navbar-form navbar-right">
         <input name="q" placeholder="Auteur, nom du livre..." type="text">
         <button type="submit" class="btn btn-default">Search</button>
