Finish HTML/CSS page 'login'

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -323,6 +323,10 @@ footer{
   height: 400px
 }
 
-.login form{
-  margin: 50px
+.login > div:first-child{
+  margin-top: 85px
+}
+
+.login > div:last-child{
+  margin-top: 50px
 }
