--- a/templates/pages/login.html
+++ b/templates/pages/login.html
@@ -3,23 +3,57 @@
 {% load static %}
 
 {% block content %}
-<div class="login">
-  <form class="form-horizontal">
-    <div class="form-group">
-      <div class="col-sm-6 col-sm-offset-1">
-        <input type="email" class="form-control" id="inputEmail3" placeholder="Email">
+<div class="row login">
+  <div class="col-sm-5">
+    <form class="form-horizontal">
+      <h4>Vite je veux voir les nouveaux textes !</h4>
+      <div class="form-group">
+        <div class="col-sm-8 col-sm-offset-1">
+          <input type="email" class="form-control" id="inputEmail3" placeholder="Email">
+        </div>
       </div>
-    </div>
-    <div class="form-group">
-      <div class="col-sm-6 col-sm-offset-1">
-        <input type="password" class="form-control" id="inputPassword3" placeholder="Password">
+
+      <div class="form-group">
+        <div class="col-sm-8 col-sm-offset-1">
+          <input type="password" class="form-control" id="inputPassword3" placeholder="Mot de passe">
+        </div>
       </div>
-    </div>
-    <div class="form">
-      <div class="col-sm-12">
-        <button type="submit" class="btn btn-default">Sign in</button>
+
+      <div class="form">
+        <div class="col-sm-offset-6 col-sm-3">
+          <button type="submit" class="btn btn-default">Se connecter</button>
+        </div>
       </div>
-    </div>
-  </form>
+    </form>
+  </div>
+
+  <div class="col-sm-offset-1 col-sm-6">
+    <form class="form-horizontal">
+      <h3>J'aimerais vraiment accéder à votre blog !</h3>
+      <div class="form-group">
+        <div class="col-sm-10 col-sm-offset-1">
+          <input type="username" class="form-control" id="exampleInputName2" placeholder="Prénom">
+        </div>
+      </div>
+
+      <div class="form-group">
+        <div class="col-sm-10 col-sm-offset-1">
+          <input type="email" class="form-control" id="inputEmail3" placeholder="Email">
+        </div>
+      </div>
+
+      <div class="form-group">
+        <div class="col-sm-10 col-sm-offset-1">
+          <input type="password" class="form-control" id="inputPassword3" placeholder="Mot de passe">
+        </div>
+      </div>
+
+      <div class="form">
+        <div class="col-sm-offset-9 col-sm-3">
+          <button type="submit" class="btn btn-default">S'inscrire</button>
+        </div>
+      </div>
+    </form>
+  </div>
 </div>
 {% endblock %}
