--- a/blog/templates/blog/details.html
+++ b/blog/templates/blog/details.html
@@ -16,7 +16,7 @@
         <time datetime="{{ post.created_at|date:'d-m-Y' }}">{{ post.created_at|date:'d-M' }}</time>
 
         <h2>{{ post.name }}</h2>
-        <p><b>de {{ post.Author.name }}</b></p>
+        <p><a href="{% url 'blog:author' %}"><b>de {{ post.Author }}</b></a></p>
         <p>{{ post.headline }}</p>
 
         <p><a href="{% url 'blog:list' %}">Retourner à la liste des livres</a></p>
