--- a/blog/templates/blog/list.html
+++ b/blog/templates/blog/list.html
@@ -14,7 +14,7 @@
         <time datetime="{{ post.created_at|date:'d-m-Y' }}">{{ post.created_at|date:'d-M' }}</time>
         <div class="caption">
           <h3>{{ post.name }}</h3>
-          <h5><a href="{% url 'blog:author' %}">de {{ post.Author }}</a></h5>
+          <h5><a href="{% url 'blog:author' post.Author.id %}">de {{ post.Author }}</a></h5>
           <p>{{ post.headline|truncatewords:20 }}</p>
           <p><a href="{% url 'blog:details' post.id %}" class="btn btn-primary" role="button">View more</a></p>
         </div>
