--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -16,7 +16,7 @@
                 <div class="title-thumbnail">
                   <h3>{{ post.name }}</h3>
                 </div>
-                <h5><a href="{% url 'blog:author' %}">de {{ post.Author }}</a></h5>
+                <h5><a href="{% url 'blog:author' post.Author.id %}">de {{ post.Author }}</a></h5>
                 <p>{{ post.headline|truncatechars:100 }}</p>
                 <p><a href="{% url 'blog:details' post.id %}" class="btn" role="button">View more</a></p>
               </div>
@@ -66,23 +66,4 @@
           </div>
       </section>
 
-      <section id="categories" class="row">
-          <div class="col-md-12">
-            <div class="col-xs-12 col-md-offset-1 col-md-3">
-              <h3>Les Oeuvres</h3>
-            </div>
-
-            <div class="col-xs-12 col-md-offset-1 col-md-3">
-              <h3><a href="{% url 'blog:author' %}">Les Auteurs</a></h3>
-            </div>
-
-            <div class="col-xs-12 col-md-offset-1 col-md-3">
-              <h3>Les Siècles</h3>
-            </div>
-
-            <div class="col-xs-12 col-md-offset-1 col-md-3">
-              <h3>Les Séquences</h3>
-            </div>
-          </div>
-      </section>
 {% endblock %}
