--- a/blog/templates/blog/author.html
+++ b/blog/templates/blog/author.html
@@ -9,7 +9,7 @@
   <article class="container-fluid">
     <div class="row">
       <div class="col-sm-4">
-        <img src="#" alt="{{ author.name }}">
+        <img src="{{ author.picture.url }}" alt="{{ author.name }}">
       </div>
 
       <div class="col-sm-8">
