--- a/blog/templates/blog/details.html
+++ b/blog/templates/blog/details.html
@@ -10,7 +10,7 @@
 <article class="container-fluid">
     <div class="row">
       <div class="col-sm-4 responsive">
-        <img src="{{ post.picture.url }}" alt="{{ post.name }}">
+        <img class="img-responsive" src="{{ post.picture.url }}" alt="{{ post.name }}">
       </div>
       <div class="col-sm-8 ">
         <time datetime="{{ post.created_at|date:'d-m-Y' }}">{{ post.created_at|date:'d-M' }}</time>
