--- a/blog/templates/blog/list.html
+++ b/blog/templates/blog/list.html
@@ -6,17 +6,21 @@
 {% block title %}RTFB | Livres{% endblock %}
 
 {% block content %}
-<section class="row">
+<section id="list" class="row">
     {% for post in posts %}
-    <div class="col-xs-12 col-sm-6 col-md-3">
+    <div class="col-md-3">
       <article class="thumbnail">
-        <img src="{{ post.picture.url }}" alt="...">
+        <div class="img-thumbnail">
+          <img class="img-responsive" src="{{ post.picture.url }}" alt="{{ post.name }}">
+        </div>
         <time datetime="{{ post.created_at|date:'d-m-Y' }}">{{ post.created_at|date:'d-M' }}</time>
         <div class="caption">
-          <h3>{{ post.name }}</h3>
+          <div class="title-thumbnail">
+            <h3>{{ post.name }}</h3>
+          </div>
           <h5><a href="{% url 'blog:author' %}">de {{ post.Author }}</a></h5>
-          <p>{{ post.headline|truncatewords:20 }}</p>
-          <p><a href="{% url 'blog:details' post.id %}" class="btn btn-primary" role="button">View more</a></p>
+          <p>{{ post.headline|truncatechars:100 }}</p>
+          <p><a href="{% url 'blog:details' post.id %}" class="btn" role="button">Voir plus</a></p>
         </div>
       </article>
     </div>
