--- a/static/css/style.css
+++ b/static/css/style.css
@@ -14,6 +14,10 @@ li{
   list-style: none
 }
 
+p{
+  text-align: justify
+}
+
 button, .btn{
   background-color: #C0D33D !important;
   color: #800;
@@ -211,12 +215,11 @@ footer{
 /*SECTION 1 : mostRecent*/
 
 #mostRecent{
-  height: 550px
+  min-height: 550px
 }
 
 #mostRecent article{
   margin-top: 40px;
-  background-color: #CDCECF
 }
 
 #mostRecent .img-thumbnail{
@@ -227,18 +230,14 @@ footer{
 }
 
 #mostRecent h3{
-  margin-top: 0;
-  color: #FEFEFE
-}
-
-#mostRecent .btn{
-  float: right
+  height: 50px;
+  margin-top: 0
 }
 
 /*SECTION 2 : mostPopular*/
 
 #mostPopular{
-  height: 550px;
+  min-height: 550px;
   margin-top: 100px
 }
 
@@ -253,44 +252,8 @@ footer{
   margin: auto
 }
 
-#mostPopular .carousel-caption{
-
-}
-
 #mostPopular > div:last-child{
   margin-top: 130px
-}
-
-#categories{
-  /*height: 500px*/
-}
-
-#categories > div{
-  height: 210px;
-  width: 210px;
-  cursor: pointer;
-  border-radius: 5px
-}
-
-#categories > div:hover{
-  transform: scale(0.96);
-  box-shadow: inset 0 0 6px #333
-}
-
-#categories > div:nth-of-type(1){
-  background-color: #F83
-}
-
-#categories > div:nth-of-type(2){
-  background-color: #48F
-}
-
-#categories > div:nth-of-type(3){
-  background-color: #C00C00
-}
-
-#categories > div:nth-of-type(4){
-  background-color: #8F9
 }
 
 /*
@@ -303,28 +266,19 @@ footer{
  #     # #####   ####   ####    #
 */
 #about p{
-  text-align: justify;
   line-height: 1.8
 }
 
 
 /*
- #       #######  #####  ### #     #
- #       #     # #     #  #  ##    #
- #       #     # #        #  # #   #
- #       #     # #  ####  #  #  #  #
- #       #     # #     #  #  #   # #
- #       #     # #     #  #  #    ##
- ####### #######  #####  ### #     #
+  #####
+ #     #  ####  #    # #####   ##    ####  #####
+ #       #    # ##   #   #    #  #  #    #   #
+ #       #    # # #  #   #   #    # #        #
+ #       #    # #  # #   #   ###### #        #
+ #     # #    # #   ##   #   #    # #    #   #
+  #####   ####  #    #   #   #    #  ####    #
 */
-.login{
-  height: 400px
-}
-
-.login > div:first-child{
-  margin-top: 85px
-}
-
-.login > div:last-child{
-  margin-top: 50px
+#contact{
+  height: 200px
 }
