--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -6,7 +6,7 @@
 
       <section id="mostRecent" class="row">
           {% for post in recent %}
-          <div class="col-md-4">
+          <div class="col-md-3">
             <article class="thumbnail">
               <div class="img-thumbnail">
                 <img class="img-responsive" src="{{ post.picture.url }}" alt="{{ post.name }}">
@@ -51,11 +51,11 @@
               <!-- Controls -->
               <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
                 <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-                <span class="sr-only">Previous</span>
+                <span class="sr-only">Précédent</span>
               </a>
               <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
                 <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-                <span class="sr-only">Next</span>
+                <span class="sr-only">Suivant</span>
               </a>
             </div>
           </div>
@@ -63,26 +63,6 @@
           <div class="col-md-5">
             <h2>Retrouvez ici, les posts les plus populaires !</h2>
             <p>Tout au long de ce blog vous trouverez la popularité des oeuvres et de leur(s) analyse(s) afin de vous offrir les meilleures analyse et interprétation.</p>
-          </div>
-      </section>
-
-      <section id="categories" class="row">
-          <div class="col-md-12">
-            <div class="col-xs-12 col-md-offset-1 col-md-3">
-              <h3>Les Oeuvres</h3>
-            </div>
-
-            <div class="col-xs-12 col-md-offset-1 col-md-3">
-              <h3><a href="{% url 'blog:author' %}">Les Auteurs</a></h3>
-            </div>
-
-            <div class="col-xs-12 col-md-offset-1 col-md-3">
-              <h3>Les Siècles</h3>
-            </div>
-
-            <div class="col-xs-12 col-md-offset-1 col-md-3">
-              <h3>Les Séquences</h3>
-            </div>
           </div>
       </section>
 {% endblock %}
